--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body{
-   background-image: url(/images/bg2.jpg);
+   background-image: url(../images/bg2.jpg);
    background-size: cover;
    width: 100%;
    height: 100vh;
@@ -174,4 +174,5 @@ body{
 .btn:hover:before, .btn:hover:after {
   top: 50%;
   opacity: 1;
+
 }
