--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body{
-   background-image: url(./images/bg2.jpg);
+   background-image: url("../images/bg2.jpg");
    background-size: cover;
    width: 100%;
    height: 100vh;
@@ -176,4 +176,5 @@ body{
   opacity: 1;
 
 }
+
 
