--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 body{
-   background-image: url("../images/bg2.jpg");
+   background-image: url("../Images/bg2.jpg");
    background-size: cover;
    width: 100%;
    height: 100vh;
@@ -176,6 +176,7 @@ body{
   opacity: 1;
 
 }
+
 
 
 
